--- a/404.md
+++ b/404.md
@@ -2,6 +2,10 @@
 permalink: /404.html
 ---
 
+# Not found
+
 Doh.. Maybe.. We have
-#Problems here
+
+## Problems here
+
 My bad, this page couldn't be found.
